# solcore

./: .gitignore  CLAUDE.md  CMakeLists.txt  Output.sol  README.md  Valt.md  blog-post.md  cabal-ghcjs-o1.project  cabal-ghcjs.project  contest.sh  flake.nix  ghcjs-flake.nix  hie.yaml  list.solc  output.tests  output.txt  output1.core  output1.hull  parse_hevm_output.awk  run_contests.sh  runsol.sh  sol-core.cabal  test.solc  testsol.sh
.github/workflows/: haskell.yml  reference-docs.yml  spec.yml
app/: Main.hs  RunSol.hs  Solver.hs
blog-post/: PaymentHandler.sol  adjust.sol  blog-post.md  erc20.sol  payment.sol  sum.sol
cache/: solidity-files-cache.json
cli/: Main.hs
cli/Csol/: Build.hs  BuildOpts.hs  Exec.hs  Run.hs  RunOpts.hs
concept-art/: has-field.sol
doc/: ContractX.md  book.toml  comptime-asm.md  comptime-design.md  comptime-for-core.md  comptime-integer.md  comptime-string.md  core.md  ct-match-labels-plan.md  gen_pipeline_diagram.py  hull.md  module-system.md
doc/railroad/: bnf2railroad.py  hull.bnf  sail.bnf
doc/src/: README.md  SUMMARY.md  language-stack.md
doc/src/core/: README.md  abi-encoding-decoding.md  data-locations.md
doc/src/hull/: README.md
doc/src/sail/: README.md  assembly.md  datatypes.md  modules.md  syntax.md  variable-declaration-and-assignment.md
docs/: typecheck-cache-poc.md
gen-std-cache/: Main.hs
nix/: blst.nix  evmone-pins.nix  evmone.nix  goevmlab.nix  intx.nix
poc/: Main.hs
scripts/: cabal-contract-tests.sh  gen-std-opcodes.py
spec/: ast.md  default.nix  generic.md  makefile  new-solidity-spec.bbl  new-solidity-spec.blg  new-solidity-spec.md  new-solidity-spec.out  new-solidity-spec.pdfsync  new-solidity-spec.tex  references.bib
spec/examples/: filter.md
src/Common/: LightYear.hs  Monad.hs  NameSupply.hs  Pretty.hs  RIO.hs
src/Language/: Core.hs  Hull.hs  Yul.hs
src/Language/Core/: Parser.hs  Types.hs
src/Language/Hull/: Compress.hs  Parser.hs  TcEnv.hs  TcMonad.hs  TypeCheck.hs  Types.hs
src/Language/Yul/: Builtins.hs  Parser.hs  QuasiQuote.hs
src/Solcore/: Api.hs  Diagnostics.hs
src/Solcore/Backend/: ComptimeCheck.hs  EmitHull.hs  Mast.hs  MastEval.hs  Retype.hs  SpecMonad.hs  Specialise.hs  TVSubst.hs
src/Solcore/Desugarer/: ArrayLitDesugar.hs  CallDesugarer.hs  ContractDispatch.hs  DecisionTreeCompiler.hs  DeriveClasses.hs  DeriveGeneric.hs  EmitCore.hs  FieldAccess.hs  IfDesugarer.hs  IndirectCall.hs  IntLiteralDesugar.hs  IntegerLiteralDesugar.hs  Interpreter.hs  LambdaLifting.hs  MatchCompiler.hs  ReplaceFunTypeArgs.hs  ReplaceWildcard.hs  Retype.hs  Specialise.hs  StrLiteralDesugar.hs  StringLiteral.hs  TypeSynonymExpand.hs  UniqueTypeGen.hs
src/Solcore/Frontend/: ComptimeCheck.hs  Syntax.hs
src/Solcore/Pipeline/: Options.hs  SolcorePipeline.hs  SolverPipeline.hs  TcCacheSerialize.hs  TypecheckCache.hs
src/Solcore/Primitives/: Primitives.hs  Primitives.solc
src/Solcore/Std/: Bundle.hs  Embed.hs
src/Solcore/Util/: Keccak.hs
src/Yule/: Builtins.hs  Compress.hs  Locus.hs  Options.hs  TM.hs  Translate.hs
std/: ABIGeneric.solc  AbiDecode.sol  AbiEncode.sol  BasicTypes.sol  Bits.solc  Generic.solc  MemberAccess.sol  Memory.sol  NumLib.solc  Packable.solc  Prelude.sol  Storage.solc  StructExample.sol  Uint.solc  array.sol  assign.solc  dispatch.sol  dispatch.solc  opcodes.solc  rtdispatch.solc  std.sol  std.solc  test.sol  tstorage.solc  types.solc  vectorization.sol
test/: Cases.hs  ContractAbiTests.hs  ContractMain.hs  DiagnosticCliTests.hs  DiagnosticTests.hs  HullCases.hs  InMemoryApiTests.hs  KeccakTests.hs  LocationTests.hs  Main.hs  MatchCompilerTests.hs  ModuleTypeCheckTests.hs  ParserTests.hs  Solver.hs  SpecialiseTests.hs  TcCacheTests.hs  YulEvalTests.hs
test/diagnostics/: duplicate-definition.solc  not-polymorphic-enough.solc  parse-error.solc  type-mismatch.solc  undefined-name.solc
test/examples/: Convertible.solc
test/examples/cases/: Ackermann.solc  Add1.solc  BadInstance.solc  BoolNot.solc  Compose.solc  Compose2.solc  Compose3.solc  CondExp.solc  DupFun.solc  DuplicateFun.solc  EitherModule.solc  Enum.solc  Eq.solc  EqQual.solc  EvenOdd.solc  Filter.solc  Foo.solc  GetSet.solc  GoodInstance.solc  Id.solc  IncompleteInstDef.solc  IndexLib.solc  Invokable.solc  KindTest.solc  ListModule.solc  Logic.solc  MatchCall.solc  Memory1.solc  Memory2.solc  Mutuals.solc  NegPair.solc  NumLib.solc  Option.solc  Pair.solc  PairMatch1.solc  PairMatch2.solc  Peano.solc  PeanoMatch.solc  Ref.solc  (+309 more)
test/imports/: alias_dup.solc  alias_hides_original_fail.solc  alias_unqualified_constr_fail.solc  alias_unqualified_fun_fail.solc  alias_unqualified_type_fail.solc  ambA.solc  amb_main.solc  amb_ok.solc  boolalias.solc  boolalias_open_fail.solc  boolaliastype.solc  boolconselect_fail.solc  boolconselect_ok.solc  booldef.solc  boolmain.solc  boolqualified.solc  boolqualifiedtype.solc  boolselect.solc  cycleA.solc  cycleB.solc  cycle_main.solc  dot_context_expr.solc  dot_left.solc  dot_right.solc  dupqual_a.solc  dupqual_b.solc  dupqual_main.solc  dupqual_module_main.solc  export_item_dup_fail.solc  export_module_dup_fail.solc  external_lib_alias_main.solc  external_lib_main.solc  external_lib_missing_fail.solc  foo.solc  glob_amb_b.solc  glob_amb_main_fail.solc  glob_export_mixed.solc  glob_hiding_amb_ok.solc  glob_import_dup_fail.solc  glob_import_hiding.solc  (+91 more)
test/solver/: red00.inp  red01.inp  red02.inp  red03.inp  red04.inp  red05.inp  red06.inp  sat00.inp  sat01.inp  sat02.inp  sat03.inp  sat04.inp  sat05.inp
test/testrunner/: CMakeLists.txt  EVMHost.cpp  EVMHost.h  EVMVersion.cpp  EVMVersion.h  Exceptions.cpp  Exceptions.h  FixedHash.h  Instruction.cpp  Instruction.h  Keccak256.cpp  Keccak256.h  common.h  example.json  example_output.json  readme.md  testrunner.cpp
test/testrunner/evmc/: CMakeLists.txt
valt-verify/src/: VaultToken.sol
web/: Main.hs  build.sh  gen-std-cache.js  ide.jsx  index.html  node-driver.cjs  simple.html  solcore-web.cabal  worker.js
yule/: Builtins.hs  Compress.hs  Locus.hs  Main.hs  Options.hs  Pipeline.hs  README.md  TM.hs  Translate.hs
(+329 files in other folders)
