cabal-version:      3.0
name:               solcore-web
version:            0.0.0.0
synopsis:           GHCJS FFI boundary exposing the solcore compiler to the browser.
build-type:         Simple

executable solcore-web
    main-is:            Main.hs
    hs-source-dirs:     .
    default-language:   Haskell2010
    default-extensions: JavaScriptFFI
    build-depends:      base, sol-core
